230_yaml_file_for_pod_that_executes_a_command.yaml
#
# TASK:
#   Write a YAML file for a pod that executes a command and slees after
#
apiVersion: v1
kind: Pod
metadata:
  name: foopod
  labels:
    environment: production
    app: foo
spec:
  containers:
    - name: foo
      image: busybox
      command: ['sh', '-c', 'echo "Hello, World!" && sleep 3600']
  restartPolicy: OnFailure
