231_yaml_file_for_a_pod_that_has_a_node_selector.yaml
#
#   TASK: Write an yaml file for a pod that has a node selector
#
apiVersion: v1
kind: Pod
metadata:
  name: foo
spec:
  containers:
    - name: foo
      image: nginx
  nodeSelector:
    foo: bar
